# gmail-dwd-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy_lambda.sh  pyproject.toml
lambda/gmail-dwd-mcp/: handler.py  requirements.txt
src/gmail_dwd_mcp/: __init__.py  __main__.py  allowed_hosts.py  auth.py  body_extraction.py  config.py  gmail_fetch.py  gmail_service.py  html_convert.py  hydrate_tools.py  hydration.py  hydration_logging.py  mime.py  models.py  normalize.py  rate_limiter.py  reply_strip.py  server.py  size_caps.py  telemetry.py  thread_hydrator.py
tests/: conftest.py  fixture_loader.py  test_body_extraction.py  test_fetch_threads_raw.py  test_fixture_corpus.py  test_fixture_loader.py  test_get_thread_tool.py  test_get_threads_tool.py  test_gmail_fetch.py  test_gmail_service_cache.py  test_html_convert.py  test_hydrate_tools.py  test_hydration_logging.py  test_hydration_models.py  test_mcp_output_schemas.py  test_normalize_thread.py  test_rate_limiter.py  test_read_schema_snapshots.py  test_reply_strip.py  test_search_threads_triage.py  test_size_caps.py  test_thread_fetch.py  test_thread_hydrator.py
tests/fixtures/threads/: README.md  empty_body.json  empty_body.py  gmail_quote.json  gmail_quote.py  html_marketing.json  html_marketing.py  html_only.json  html_only.py  long_thread.json  long_thread.py  multipart_alternative.json  multipart_alternative.py  nested_multipart.json  nested_multipart.py  outlook_quoted_reply.json  outlook_quoted_reply.py  plain_only.json  plain_only.py  plain_signature.py
