[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmail-dwd-mcp-server"
version = "0.1.0"
description = "Gmail MCP server with domain-wide delegation via WIF credentials from SSM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "google-api-python-client>=2.160.0",
    "google-auth>=2.38.0",
    "boto3>=1.36.0",
    "pydantic>=2.10.0",
    "aws-opentelemetry-distro>=0.17.0",
]

[project.scripts]
gmail-dwd-mcp = "gmail_dwd_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gmail_dwd_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
